# SpaceX-Launch-Tracker

./: README.md  pyproject.toml
src/api/: filters.py
src/api/v1/: __init__.py  launch.py  serializers.py  stats.py
src/backend/: settings.py  urls.py
src/tracker/: enums.py
src/tracker/management/commands/: fetch_spacex_data.py
src/tracker/migrations/: 0001_initial.py
src/tracker/models/: __init__.py  launch.py  launchpad.py  rocket.py
src/tracker/spacex/: client.py  dataclasses.py
tests/: conftest.py  test_launch.py  test_spacex_fetch_data.py  test_stats.py
